elk/pro-cluster-demo/ingress-es-c1-skywalking-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: biz
  labels:
    app: kibana
  name: kibana-c1-admin-skywalking
  namespace: elasticsearch
spec:
  rules:
  - host: kibana-c1-admin-skywalking.biz.com
    http:
      paths:
      - backend:
          serviceName: kibana-kibana
          servicePort: 5601
        path: /
